# GameHost

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  claude_code_prompt.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_users_refresh_tokens.py  0002_templates_nodes.py  0003_servers_tasks_audit.py  0004_server_invites.py  0005_backups.py  0006_node_public_host.py
apps/api/scripts/: seed_templates.py
apps/api/src/gamehost_api/: __init__.py  main.py
apps/api/src/gamehost_api/api/v1/: audit.py  auth.py  backups.py  members.py  nodes.py  router.py  servers.py  tasks.py  templates.py
apps/api/src/gamehost_api/clients/: logs.py  node_agent.py
apps/api/src/gamehost_api/core/: config.py  deps.py  jobs.py  metrics.py  security.py
apps/api/src/gamehost_api/db/: base.py  models.py
apps/api/src/gamehost_api/domain/: audit.py  auth.py  backups.py  catalog.py  lifecycle.py  members.py
apps/api/src/gamehost_api/schemas/: audit.py  auth.py  backups.py  members.py  nodes.py  servers.py  templates.py
apps/api/tests/: conftest.py  test_audit.py  test_auth.py  test_backups.py  test_catalog.py  test_health.py  test_lifecycle.py  test_logs.py  test_members.py
apps/node_agent/: Dockerfile  pyproject.toml
apps/node_agent/src/gamehost_node/: __init__.py  config.py  deps.py  docker_ops.py  logs.py  main.py  schemas.py  security.py
apps/node_agent/src/gamehost_node/api/: __init__.py  router.py
apps/node_agent/tests/: __init__.py  test_containers.py  test_health.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/app/servers/: page.tsx
apps/web/app/servers/[id]/: page.tsx
apps/web/components/: app-nav.tsx  language-toggle.tsx  providers.tsx  status-pill.tsx  theme-toggle.tsx
apps/web/components/ui/: button.tsx
apps/web/lib/: api.ts  game-config.ts  i18n.tsx
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/gamehost_worker/: __init__.py  main.py
apps/worker/src/gamehost_worker/clients/: __init__.py
apps/worker/tests/: test_worker.py
deploy/: docker-compose.prod.yml  docker-compose.yml
deploy/ansible/: README.md  node.yml
deploy/ansible/roles/node-agent/handlers/: main.yml
deploy/ansible/roles/node-agent/tasks/: main.yml
deploy/ansible/roles/node-agent/templates/: gamehost-node-agent.service.j2  node-agent.env.j2
deploy/grafana/provisioning/dashboards/: dashboards.yml  platform-overview.json
deploy/prometheus/: prometheus.yml
deploy/promtail/: config.yml
docs/: architecture.md  runbook.md
