[project]
name = "gamehost-api"
version = "0.1.0"
description = "GameHost public API"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.17,<2",
  "aiosqlite>=0.21,<1",
  "argon2-cffi>=25.1,<26",
  "asyncpg>=0.30,<1",
  "fastapi>=0.121,<1",
  "gamehost-shared",
  "greenlet>=3.3,<4",
  "httpx>=0.28,<1",
  "prometheus-fastapi-instrumentator>=7.1,<8",
  "pydantic-settings>=2.11,<3",
  "python-jose[cryptography]>=3.5,<4",
  "redis>=5.0,<6",
  "sqlalchemy>=2.0,<3",
  "structlog>=25.4,<26",
  "uuid6>=2025.0,<2027",
  "uvicorn[standard]>=0.38,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gamehost_api"]
