[project]
name = "gamehost-worker"
version = "0.1.0"
description = "GameHost ARQ worker"
requires-python = ">=3.12,<3.15"
dependencies = [
  "arq>=0.26,<1",
  "gamehost-api",
  "gamehost-shared",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.11,<3",
  "redis>=5.0,<6",
  "structlog>=25.4,<26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gamehost_worker"]
